--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
   "keywords": [],
   "main": "/loginForm.html",
   "dependencies": {
-    "mobx": "^5.14.0",
-    "mobx-react": "^6.1.3",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-scripts": "4.0.0"
   }
 }
